[gd_scene load_steps=2 format=3 uid="uid://cenw7bm6esgud"]

[ext_resource type="Script" uid="uid://cenflon56fe41" path="res://Non OpSys/Scripts/loginsetup.gd" id="1_ry6g4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ry6g4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.301961, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Hi, it appears as though you are new here, or you somehow lost the login ðŸ’€. Either way, you get to create a new account ï¼ˆï¿£ï¸¶ï¿£ï¼‰â†—




Please enter your desired Username and Password:"

[node name="User" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 157.0
offset_right = 626.0
offset_bottom = 188.0
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 189.0
offset_right = 843.0
offset_bottom = 220.0
placeholder_text = "A payment of over $24 Quattuordecillion XD. Just kidding, Password"
secret = true
secret_character = "Ï€"

[node name="Confirmation" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 220.0
offset_right = 843.0
offset_bottom = 251.0
placeholder_text = "Confirm Password"
secret = true
secret_character = "Ï€"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 851.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 231.0
text = "Show Password"

[node name="PasswordRealizer" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 368.0
offset_right = 655.0
offset_bottom = 391.0

[node name="Setup" type="Button" parent="."]
layout_mode = 0
offset_left = 245.0
offset_top = 493.0
offset_right = 344.0
offset_bottom = 524.0
text = "Set up login"

[connection signal="pressed" from="CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="Setup" to="." method="_on_setup_pressed"]
